tests/NormalTests/paczka1/fuzzy1/73136964.err
Error in line 6: pdgYaoFf A970 27,8
Error in line 11: pdgYaoFf A147 -4,4
Error in line 5: WOTvzcM A773 80,3
Error in line 14: 76tP A147 40,3
Error in line 12: WOTvzcM S969 71,0
Error in line 32: Eqba A147 56,4
Error in line 35: Eqba A773 42,1
Error in line 39: 9XTKcs A970 30,9
